--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,12 +1,14 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
+
 @import url('./reset.css');
-@import url('./vite-promo.css');
 @import url('./header.css');
+@import url('./hero.css');
+@import url('./about-us.css');
+@import url('./lessons.css');
+@import url('./proposal.css');
+@import url('./teachers.css');
+@import url('./leave.css');
+@import url('./reviews.css');
+@import url('./footer.css');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
