--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,7 +11,7 @@
 @import url('./footer.css');
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Manrope', sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
