add section + variables

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,10 @@
-
+/* Base */
 @import url('base/reset.css');
-@import url('layout/header.css');
+
+/* Utils */
+@import url('utils/variables.css');
+
+/* Components */
 @import url('components/hero.css');
 @import url('components/about-us.css');
 @import url('components/lessons.css');
@@ -8,7 +12,11 @@
 @import url('components/teachers.css');
 @import url('components/leave.css');
 @import url('components/reviews.css');
+
+/* Layouts */
+@import url('layout/header.css');
 @import url('layout/footer.css');
+
 
 :root {
   font-family: 'Manrope', sans-serif;
