updated lesson section

--- a/src/partials/lessons.html
+++ b/src/partials/lessons.html
@@ -1,5 +1,42 @@
-<section class='section'>
-  <div class='container'>
-    <p>lessons</p>
+<section class="section">
+  <div class="container">
+    <h2 class="section-title">Our lessons</h2>
+    <p class="section-title-text">
+      Our lessons are carefully structured and interactive, designed to promote
+      rapid language acquisition through practical tasks and real-world
+      scenarios
+    </p>
+    <ul class="section-menu">
+      <li class="section-items">
+        <strong class="section-strong">Practice</strong>
+        <span class="section-span">40$ / month</span>
+        <p class="section-text">
+          This plan offers an opportunity for learners to engage in
+          collaborative language exercises and group activities, boosting their
+          conversational skills and confidence in using English.
+        </p>
+        <button class="section-btn">Leave an application</button>
+      </li>
+      <li class="section-items">
+        <strong class="section-strong--active">Standart</strong>
+        <span class="section-span--active">70$ / month</span>
+        <p class="section-text--active">
+          Our standard package provides a balanced learning approach that covers
+          all key areas of English language - reading, writing, listening, and
+          speaking. It is a set of basic knowledge and skills.
+        </p>
+        <button class="section-btn--active">Leave an application</button>
+      </li>
+      <li class="section-items">
+        <strong class="section-strong">Individual</strong>
+        <span class="section-span">99$ / month</span>
+        <p class="section-text">
+          We offer a tailored learning experience with individualized
+          instruction that focuses on a learner's specific language goals and
+          challenges, offering personal feedback.
+        </p>
+        <button class="section-btn">Leave an application</button>
+      </li>
+    </ul>
   </div>
 </section>
