faet: add new global variables

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,6 +17,10 @@
 @import url('layout/header.css');
 @import url('layout/footer.css');
 
+/* Sections & Containers */
+@import url('utils/section.css');
+@import url('utils/container.css');
+
 
 :root {
   font-family: 'Manrope', sans-serif;
