--- a/src/css/utils/variables.css
+++ b/src/css/utils/variables.css
@@ -1,4 +1,5 @@
-:root { /* Section */
+:root {
+  /* Section */
   --section-padding-bottom-mobile: 80px;
   --section-padding-bottom-tablet: 100px;
   --section-padding-bottom-desktop: 150px;
@@ -6,4 +7,49 @@
   --section-about-padding-top-mobile: 80px;
   --section-about-padding-top-tablet: 100px;
   --section-about-padding-top-desktop: 96px;
+
+  /* Colors */
+  --primary-text-color: #121417;
+  --secondary-text-color: rgba(18, 20, 23, 0.5);
+  --light-text-color: rgba(255, 255, 255, 0.7);
+  --footer-light-text-color: rgba(255, 255, 255, 0.6);
+  --accent-color: #4dc274;
+  --light-accent-color: #d4fde1;
+  --highlight-color: #bee8cc;
+  --box-bg-color: #f3f5f6;
+  --input-border-color: rgba(18, 20, 23, 0.1);
+  --button-border-color: rgba(255, 255, 255, 0.4);
+  --footer-bg-color: #121417;
+  --main-bg-color: #ffffff;
+  --white-color: #ffffff;
+
+  /* Breakpoints */
+  --mobile: 375px;
+  --mobile-max: 767px;
+  --tablet: 768px;
+  --table-max: 1279px;
+  --desktop: 1280px;
+
+  /* Transition properties */
+  --time: 250ms;
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  /* Backdrop */
+  --background-color: rgba(18, 20, 23, 0.4);
+
+  /* Backdrop */
+  --base-font: 'Manrope', sans-serif;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
