--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,5 +1,5 @@
-<section class='section'>
-  <div class='container'>
+<section class="section reviewsSection">
+  <div class="container">
     <p>reviews</p>
   </div>
 </section>
