--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,7 +5,7 @@
         <div class="footer-logo-tel-address">
           <a class="logotype link" href="./index.html">
             <div class="logotype-wrapper">
-              english<span class="logotype-right-accent">excellence<
+              english<span class="logotype-right-accent">excellence
             </div>
           </a>
 
@@ -81,7 +81,7 @@ us">Contact us</a></li>
                   height="28"
                   aria-label="Instagram icon"
                 >
-                  <use href="./images/icons.svg#icon-instagram"></us
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -117,7 +117,4 @@ us">Contact us</a></li>
     <a class="link" href="#">Terms of Service</a>
   </div>
 </footer>
-
-      </div>
-    </footer>
 
