--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,120 +1,143 @@
-
-    <!-- FOOTER -->
-    <footer class="footer" role="contentinfo">
-      <div class="footer-container container">
-        <div class="footer-logo-tel-address">
-          <a class="logotype link" href="./index.html">
-            <div class="logotype-wrapper">
-              english<span class="logotype-right-accent">excellence
-            </div>
-          </a>
-
-<address>
-  <ul class="footer-contact-list list">
-    <li class="footer-contact-list-item">
-      <span class="label">Phone number:</span>
-      <span class="value">
-        <a href="tel:+380684439426" aria-label="Phone number +380 (6
-26" rel="noopener noreferrer">
-          +380 (68) 443-94-26
-        </a>
-      </span>
-    </li>
-    <li class="footer-contact-list-item">
-      <span class="label">Address:</span>
-      <span class="value">
-        <a href="https://www.google.com/maps?q=32a+M.+Bazhana+ave"
-target="_blank" rel="noopener noreferrer">
-          32a M. Bazhana ave
-        </a>
-      </span>
-    </li>
-  </ul>
-</address>
-
-</div>
-
-
-        <div class="footer-menu">
-          <ul class="footer-menu-list list">
-            <li class="footer-menu-list-item"><a class="link" href="
-us">About us</a></li>
-            <li class="footer-menu-list-item"><a class="link" href="
-lessons">Our lessons</a></li>
-            <li class="footer-menu-list-item"><a
-class="link"href="#teachers.">Teachers</a></li>
-            <li class="footer-menu-list-item"><a class="link"
-href="#reviews">Reviews</a></li>
-            <li class="footer-menu-list-item"><a class="link" href="
-us">Contact us</a></li>
-          </ul>
+<!-- FOOTER -->
+<footer class="footer" role="contentinfo">
+  <div class="footer-container container">
+    <div class="footer-logo-tel-address">
+      <a class="logotype link" href="./index.html">
+        <div class="logotype-wrapper">
+          english<span class="logotype-right-accent">excellence</span>
         </div>
-        <div class="footer-social-media">
-          <ul class="social-media-contacts-list list">
-                       <li class="social-media-contact-item">
-             <a
-               class="social-media-link image-btn"
-               href=""
-               target="_blank"
-               rel="noopener noreferrer"
-             >
-               <svg
-                 class="social-contact-icon"
-                 width="28"
-                 height="28"
-                 aria-label="Twitter icon"
-               >
-                 <use href="./images/icons.svg#icon-facebook"></use>
-               </svg>
-             </a>
-           </li>
-            <li class="social-media-contact-item">
+      </a>
+
+      <address>
+        <ul class="footer-contact-list list">
+          <li class="footer-contact-list-item">
+            <span class="label">Phone number:</span>
+            <span class="value">
               <a
-                class="social-media-link image-btn"
-                href=""
+                href="tel:+380684439426"
+                aria-label="Phone number +380 (6
+26"
+                rel="noopener noreferrer"
+              >
+                +380 (68) 443-94-26
+              </a>
+            </span>
+          </li>
+          <li class="footer-contact-list-item">
+            <span class="label">Address:</span>
+            <span class="value">
+              <a
+                href="https://www.google.com/maps?q=32a+M.+Bazhana+ave"
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg
-                  class="social-contact-icon"
-                  width="28"
-                  height="28"
-                  aria-label="Instagram icon"
-                >
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
+                32a M. Bazhana ave
               </a>
-            </li>
+            </span>
+          </li>
+        </ul>
+      </address>
 
-            <li class="social-media-contact-item">
-              <a
-                class="social-media-link image-btn "
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <svg
-                  class="social-contact-icon"
-                  width="28"
-                  height="28"
-                  aria-label="Facebook icon"
-                >
-                  <use href="./images/icons.svg#icon-youtube"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
+      <div class="footer-menu">
+        <ul class="footer-menu-list list">
+          <li class="footer-menu-list-item">
+            <a
+              class="link"
+              href="
+us"
+              >About us</a
+            >
+          </li>
+          <li class="footer-menu-list-item">
+            <a
+              class="link"
+              href="
+lessons"
+              >Our lessons</a
+            >
+          </li>
+          <li class="footer-menu-list-item">
+            <a class="link" href="#teachers.">Teachers</a>
+          </li>
+          <li class="footer-menu-list-item">
+            <a class="link" href="#reviews">Reviews</a>
+          </li>
+          <li class="footer-menu-list-item">
+            <a
+              class="link"
+              href="
+us"
+              >Contact us</a
+            >
+          </li>
+        </ul>
       </div>
-      <div class="copyright-privacy-terms">
+      <div class="footer-social-media">
+        <ul class="social-media-contacts-list list">
+          <li class="social-media-contact-item">
+            <a
+              class="social-media-link image-btn"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg
+                class="social-contact-icon"
+                width="28"
+                height="28"
+                aria-label="Twitter icon"
+              >
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-media-contact-item">
+            <a
+              class="social-media-link image-btn"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg
+                class="social-contact-icon"
+                width="28"
+                height="28"
+                aria-label="Instagram icon"
+              >
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
 
-  <div class="footer-left">
-    <small>&copy; 2023  English Excellence. All rights reserved.</sm
-  </div>
+          <li class="social-media-contact-item">
+            <a
+              class="social-media-link image-btn"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg
+                class="social-contact-icon"
+                width="28"
+                height="28"
+                aria-label="Facebook icon"
+              >
+                <use href="./images/icons.svg#icon-youtube"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="copyright-privacy-terms">
+      <div class="footer-left">
+        <small>&copy; 2023 English Excellence. All rights reserved.</small>
+      </div>
 
-  <div class="footer-right">
-    <a class="link" href="#">Privacy Policy</a>
-    <a class="link" href="#">Terms of Service</a>
+      <div class="footer-right">
+        <a class="link" href="#">Privacy Policy</a>
+        <a class="link" href="#">Terms of Service</a>
+      </div>
+    </div>
   </div>
 </footer>
-
