added structure of about-us

--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,5 +1,30 @@
 <section class='section'>
   <div class='container'>
-    <p>about-us</p>
+    <h2>About Us</h2>
+
+    <p>
+      We are dedicated to providing engaging and effective English language
+      courses in a supportive and stimulating learning environment
+    </p>
+
+    <ul class='about-us_list'>
+      <li class='about-us_item'>
+        <p>Expert, innovative teaching staff</p>
+      </li>
+
+      <li class='about-us_item'>
+        <p>Wide range of course levels and options</p>
+      </li>
+
+      <li class='about-us_item'>
+        <p>Multicultural learning environment</p>
+      </li>
+
+      <li class='about-us_item'>
+        <p>Comprehensive language support services</p>
+      </li>
+    </ul>
+
+    <div></div>
   </div>
 </section>
