--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,30 +1,32 @@
-<section class='section'>
+<section class='section about-us_section'>
   <div class='container'>
-    <h2>About Us</h2>
+    <h2 class='about-us_title'>About Us</h2>
 
-    <p>
+    <p class='about-us_subtitle'>
       We are dedicated to providing engaging and effective English language
       courses in a supportive and stimulating learning environment
     </p>
 
     <ul class='about-us_list'>
       <li class='about-us_item'>
-        <p>Expert, innovative teaching staff</p>
+        <p class='about-us_item_text'>Expert, innovative teaching staff</p>
       </li>
 
       <li class='about-us_item'>
-        <p>Wide range of course levels and options</p>
+        <p class='about-us_item_text'>Wide range of course levels and options</p>
       </li>
 
       <li class='about-us_item'>
-        <p>Multicultural learning environment</p>
+        <p class='about-us_item_text'>Multicultural learning environment</p>
       </li>
 
       <li class='about-us_item'>
-        <p>Comprehensive language support services</p>
+        <p class='about-us_item_text'>Comprehensive language support services</p>
       </li>
     </ul>
 
-    <div></div>
+    <div class='about-us_img-wrap'>
+
+    </div>
   </div>
 </section>
