--- a/src/partials/lessons.html
+++ b/src/partials/lessons.html
@@ -1,5 +1,44 @@
-<section class='section'>
-  <div class='container'>
-    <p>lessons</p>
+<section class="section-lesson" id="lesson">
+  <div class="lesson-container">
+    <h2 class="lesson-title">Our lessons</h2>
+    <p class="lesson-title-text">
+      Our lessons are carefully structured and interactive, designed to promote
+      rapid<br />
+      language acquisition through practical tasks and real-world scenarios
+    </p>
+    <ul class="lesson-menu">
+      <li class="lesson-items">
+        <strong class="lesson-strong">Practice</strong>
+        <span class="lesson-span">40$ / month</span>
+        <p class="lesson-text">
+          This plan offers an opportunity for learners to engage in
+          collaborative language exercises and group activities, boosting their
+          conversational skills and confidence in using English.
+        </p>
+        <button class="lesson-btn">Leave an application</button>
+      </li>
+      <li class="lesson-items lesson-items--active">
+        <strong class="lesson-strong lesson-strong--active">Standart</strong>
+        <span class="lesson-span lesson-span--active">70$ / month</span>
+        <p class="lesson-text lesson-text--active">
+          Our standard package provides a balanced learning approach that covers
+          all key areas of English language - reading, writing, listening, and
+          speaking. It is a set of basic knowledge and skills.
+        </p>
+        <button class="lesson-btn lesson-btn--active">
+          Leave an application
+        </button>
+      </li>
+      <li class="lesson-items">
+        <strong class="lesson-strong">Individual</strong>
+        <span class="lesson-span">99$ / month</span>
+        <p class="lesson-text">
+          We offer a tailored learning experience with individualized
+          instruction that focuses on a learner's specific language goals and
+          challenges, offering personal feedback.
+        </p>
+        <button class="lesson-btn">Leave an application</button>
+      </li>
+    </ul>
   </div>
 </section>
