first approach, all media

--- a/src/partials/teachers.html
+++ b/src/partials/teachers.html
@@ -1,5 +1,70 @@
-<section class='section'>
-  <div class='container'>
-    <p>teachers</p>
+<section id="teachers" class="teachers section">
+  <div class="container">
+    <h2 class="visually-hidden">Teachers</h2>
+    <p>Meet our <span>teachers</span></p>
+    <p>
+      Discover our team of dedicated educators, committed to guiding you on your
+      journey to English proficiency with personalized and engaging instruction
+    </p>
+    <ul class="teachers-list">
+      <li class="teacher-card">
+        <div class="avatar">
+          <img
+            srcset="/assets/img/teachers/Maria@2x.png 2x"
+            src="/assets/img/teachers/Maria.png"
+            alt="Maria"
+          />
+        </div>
+        <p class="name">Maria</p>
+        <p class="skills">
+          A seasoned linguist and our primary specialist in beginner-level
+          instruction, Maria brings warmth and patience to every class
+        </p>
+      </li>
+      <li class="teacher-card">
+        <div class="avatar">
+          <img
+            srcset="/assets/img/teachers/Artem@2x.png 2x"
+            src="/assets/img/teachers/Artem.png"
+            alt="Artem"
+          />
+        </div>
+        <p class="name">Artem</p>
+        <p class="skills">
+          With his innovative teaching techniques and a focus on interactive
+          learning, Artem excels in keeping students engaged and motivated
+        </p>
+      </li>
+      <li class="teacher-card">
+        <div class="avatar">
+          <img
+            srcset="/assets/img/teachers/Ilona@2x.png 2x"
+            src="/assets/img/teachers/Ilona.png"
+            alt="Ilona"
+          />
+        </div>
+        <p class="name">Ilona</p>
+        <p class="skills">
+          A specialist in advanced English, Ilona provides intensive
+          instruction, ensuring students gain confidence in complex language
+          tasks
+        </p>
+      </li>
+      <li class="teacher-card">
+        <div class="avatar">
+          <img
+            srcset="/assets/img/teachers/Volodymyr@2x.png 2x"
+            src="/assets/img/teachers/Volodymyr.png"
+            alt="Volodymyr"
+          />
+        </div>
+        <p class="name">Volodymyr</p>
+        <p class="skills">
+          Our expert in English for specific purposes, Volodymyr tailors his
+          approach to meet individual career and industry-specific language
+          needs
+        </p>
+      </li>
+    </ul>
   </div>
 </section>
