--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -1,8 +1,8 @@
-<section class="section module-team">
-  <div class="container wrapper">
+<section class="section section-team">
+  <div class="container team-wrapper">
     <div class="team">
-      <h2 class="title">Meet our <span>team</span></h2>
-      <p class="subtitle">
+      <h2 class="team-title">Meet our <span>team</span></h2>
+      <p class="team-subtitle">
         Welcome to the English Excellence team project page! This one-page
         website project aims to create an excellent English learning experience
         for our users. Each participant made a valuable contribution to the
