--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -217,14 +217,14 @@ body {
         <li class="social-media-contact-item">
           <a class="social-media-link image-btn" href="" target="_blank" rel="noopener noreferrer">
             <svg class="social-contact-icon" width="28" height="28" aria-label="Facebook icon">
-              <use href="../public/icons.svg#icon-facebook"></use>
+              <use href="/public/icons.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
         <li class="social-media-contact-item">
           <a class="social-media-link image-btn" href="" target="_blank" rel="noopener noreferrer">
             <svg class="social-contact-icon" width="28" height="28" aria-label="Instagram icon">
-              <use href="../public/icons.svg#icon-instagram"></use>
+              <use href="/public/icons.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
@@ -232,7 +232,7 @@ body {
         <li class="social-media-contact-item">
           <a class="social-media-link image-btn" href="" target="_blank" rel="noopener noreferrer">
             <svg class="social-contact-icon" width="28" height="28" aria-label="Youtube icon">
-              <use href="../public/icons.svg#icon-youtube"></use>
+              <use href="/public/icons.svg#icon-youtube"></use>
             </svg>
           </a>
         </li>
