--- a/src/partials/lessons.html
+++ b/src/partials/lessons.html
@@ -1,6 +1,8 @@
 <section class="section-lesson" id="lesson">
   <div class="lesson-container">
-    <h2 class="lesson-title">Our lessons</h2>
+    <h2 class="lesson-title">
+      Our <span class="lesson-title-span">lessons</span>
+    </h2>
     <p class="lesson-title-text">
       Our lessons are carefully structured and interactive, designed to promote
       rapid<br />
