--- a/src/css/components/lessons.css
+++ b/src/css/components/lessons.css
@@ -29,6 +29,21 @@
   margin-bottom: 16px;
 }
 
+.lesson-title-span {
+  position: relative;
+}
+
+.lesson-title-span:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 20px;
+  background: var(--highlight-color);
+  border-radius: 50px;
+  bottom: 10%;
+  z-index: -1;
+}
+
 .lesson-title-text {
   color: rgba(18, 20, 23, 0.50);
   text-align: center;
