added hero section  styles + bg image

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,15 @@
-<section class='section'>
-  <div class='container'>
-    <p>hero</p>
+<section class='hero'>
+  <div class='hero__container hero__bg-image'>
+    <div class='hero__content'>
+      <h1 class="hero__title">Discover the joy of learning <span class="hero__title--accent">English</span> with us!
+      </h1>
+      <button class="button hero__button" type="button">Leave an application</button>
+      <a class="link hero__link" href="#contacts">
+        <!-- <svg class="hero__arrow" width="24" height="24"> -->
+        <!-- <use href="/images/sprites/sprite.svg#i-arrow"></use> -->
+        <!-- </svg> -->
+      </a>
+    </div>
   </div>
+
 </section>
