--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,23 +1,20 @@
-<header class="header">
-  <div class="container header__wrapper">
-    <div class="">
-      <p class="logo">english<span class="logo--accent">excellence</span>.</p>
-    </div>
-    <!-- Start desktop elements -->
-    <nav>
-      <ul class="header__nav__list">
-        <li><a class="nav__link" href="">About Us</a></li>
-        <li><a class="nav__link" href="">Our Lessons</a></li>
-        <li><a class="nav__link" href="">Teachers</a></li>
-        <li><a class="nav__link" href="">Reviews</a></li>
-        <li><a class="nav__link" href="">Contact us</a></li>
-      </ul>
-    </nav>
-    <div>
-      <ul class="header__social__list">
+<div class="backdrop is-hidden" data-modal>
+  <div class="modal">
+    <div class="modal__wrapper">
+      <button class="button-close" type="button" data-modal-close>close</button>
+      <nav>
+        <ul class="modal__nav__list">
+          <li><a class="modal__nav__link" href="">About Us</a></li>
+          <li><a class="modal__nav__link" href="">Our Lessons</a></li>
+          <li><a class="modal__nav__link" href="">Teachers</a></li>
+          <li><a class="modal__nav__link" href="">Reviews</a></li>
+          <li><a class="modal__nav__link" href="">Contact us</a></li>
+        </ul>
+      </nav>
+      <ul class="modal__social__list">
         <li class="">
           <a
-            class="social__link"
+            class="modal__social__link"
             href=""
             target="_blank"
             rel="noopener noreferrer"
@@ -34,7 +31,7 @@
         </li>
         <li class="">
           <a
-            class="social__link"
+            class="modal__social__link"
             href=""
             target="_blank"
             rel="noopener noreferrer"
@@ -52,7 +49,7 @@
 
         <li class="">
           <a
-            class="social__link"
+            class="modal__social__link"
             href=""
             target="_blank"
             rel="noopener noreferrer"
@@ -69,7 +66,5 @@
         </li>
       </ul>
     </div>
-    <!-- start mobile/tablet elements -->
-    <div class="header__btn" data-modal-open type="button">open</div>
   </div>
-</header>
+</div>
