--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,32 +1,38 @@
-<section class='section about-us_section'>
+<section id='#about-us' class='section about-us_section'>
   <div class='container'>
-    <h2 class='about-us_title'>About Us</h2>
+    <h2 class='section_title'>About <span class='section_title_span'>Us</span></h2>
 
-    <p class='about-us_subtitle'>
+    <p class='section_subtitle section_subtitle_center'>
       We are dedicated to providing engaging and effective English language
       courses in a supportive and stimulating learning environment
     </p>
 
-    <ul class='about-us_list'>
-      <li class='about-us_item'>
-        <p class='about-us_item_text'>Expert, innovative teaching staff</p>
-      </li>
+    <div class='wrapper'>
+      <ul class='about-us_list'>
+        <li class='about-us_item'>
+          <p class='about-us_item_text'>Expert, innovative teaching staff</p>
+        </li>
 
-      <li class='about-us_item'>
-        <p class='about-us_item_text'>Wide range of course levels and options</p>
-      </li>
+        <li class='about-us_item'>
+          <p class='about-us_item_text'>Wide range of course levels and options</p>
+        </li>
 
-      <li class='about-us_item'>
-        <p class='about-us_item_text'>Multicultural learning environment</p>
-      </li>
+        <li class='about-us_item'>
+          <p class='about-us_item_text'>Multicultural learning environment</p>
+        </li>
 
-      <li class='about-us_item'>
-        <p class='about-us_item_text'>Comprehensive language support services</p>
-      </li>
-    </ul>
+        <li class='about-us_item'>
+          <p class='about-us_item_text'>Comprehensive language support services</p>
+        </li>
+      </ul>
 
-    <div class='about-us_img-wrap'>
-
+      <div class='about-us_img-wrap'>
+        <img
+          srcset="../assets/img/about-us/memoji.png 1x, ../assets/img/about-us/memoji@2x.png 2x"
+             src="../assets/img/about-us/memoji.png" alt="memoji girl"
+             width="254"
+        >
+      </div>
     </div>
   </div>
 </section>
