fix img path in about-us

--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -28,8 +28,8 @@
 
       <div class='about-us_img-wrap'>
         <img
-          srcset="../assets/img/about-us/memoji.png 1x, ../assets/img/about-us/memoji@2x.png 2x"
-             src="../assets/img/about-us/memoji.png" alt="memoji girl"
+          srcset="/assets/img/about-us/memoji.png 1x, /assets/img/about-us/memoji@2x.png 2x"
+             src="/assets/img/about-us/memoji.png" alt="memoji girl"
              width="254"
         >
       </div>
